--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && tsc -p tsconfig.emit.json"
+    "build": "rm -rf dist tsconfig.emit.tsbuildinfo && tsc -p tsconfig.emit.json"
   },
   "repository": {
     "type": "git",
