--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,7 @@
     "inlineSources": true,
     "sourceMap": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
